# ghostpurge

./: .gitignore  README.md  README_WINDOWS.md  main_windows.py  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml.template
ghostpurge/: __init__.py  config.py  main.py  utils.py
ghostpurge/cleaners/: __init__.py  base.py  clean_cache.py  clean_configs.py  clean_logs.py  clean_orphans.py  clean_systemd.py  clean_win_folders.py  clean_win_registry.py  clean_win_services.py  clean_win_shortcuts.py  clean_win_tasks.py  registry.py
ghostpurge/watchers/: __init__.py  base.py  watcher_appimage.py  watcher_dpkg.py  watcher_flatpak.py  watcher_npm.py  watcher_pip.py  watcher_snap.py  watcher_steam.py  watcher_win_filesystem.py  watcher_win_registry.py  watcher_win_wmi.py
ghostpurge/windows/: cleaner_windows.py  watcher_filesystem.py  watcher_registry.py  watcher_wmi.py  windows_service.py
tests/: test_ghostpurge.py
tests_windows/: test_windows.py  test_windows_mock.py
